Added the 3rd Section
All the related code was added to the files

--- a/index.html
+++ b/index.html
@@ -20,10 +20,32 @@
     <div class="hero">
         <div class="container">
             <div class="hero-heading roboto-font">This website is awesome</div>
-            <div class="hero-text">This website has some subtext that goes here under the main title.It's a smaller font and lower contrast</div>
+            <div class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and lower contrast.</div>
             <div><button class="btn roboto-font">Sign up</button></div>
         </div>
         <div class="place-image hero-text">this is a placeholder for an image</div>
+    </div>
+    <div class="third-section roboto-font">
+            <div class="third-sec-heading">Some random information.</div>
+
+            <div class="third-sec-container">
+                <div class="card">
+                    <div class="empty"></div>
+                    <div class="third-sec-text">This is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="empty"></div>
+                    <div class="third-sec-text">This is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="empty"></div>
+                    <div class="third-sec-text">This is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="empty"></div>
+                    <div class="third-sec-text">This is some subtext under an illustration or image</div>
+                </div>
+            </div>
     </div>
 </body>
 </html>
