Added the footer(6th) section

--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@
             <div><button  class="fifth-sec-btn">Sign up</button></div>
         </div>
     </div>
+    <div class="footer roboto-font">
+        Copyright © The Odin Project 2024
+    </div>
 </body>
 </html>
